media/base/radarr/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    app.openshift.io/vcs-ref: ""
    app.openshift.io/vcs-uri: https://github.com/csfreak/homelab
    app.openshift.io/connects-to: '[{"apiVersion":"apps/v1","kind":"Deployment","name":"nzbget"},{"apiVersion": "v1","kind":"PersistentVolumeClaim","name":"shared-media-ssd"}]'
  name: radarr
spec:
  replicas: 1
  revisionHistoryLimit: 2
  selector:
    matchLabels:
      deployment: radarr
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        deployment: radarr
    spec:
      containers:
        - imagePullPolicy: IfNotPresent
          image: radarr
          name: radarr
          ports:
            - containerPort: 7878
              name: radarr
              protocol: TCP
          resources:
            requests:
              memory: 512Mi
              cpu: 100m
            limits:
              memory: 2Gi
              cpu: 1000m
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
          volumeMounts:
            - mountPath: /config
              name: radarr-config
            - mountPath: /config/Backups
              name: backups
            - mountPath: /downloads
              name: radarr-downloads
            - mountPath: /media/hdd
              name: radarr-media-hdd
            - mountPath: /media/ssd
              name: radarr-media-ssd
        - name: radarr-metrics
          image: exportarr
          imagePullPolicy: Always
          command:
            - "/exportarr"
            - "radarr"
          resources:
            limits:
              memory: "128Mi"
              cpu: "100m"
            requests:
              memory: "28Mi"
              cpu: "10m"
          ports:
            - containerPort: 9708
              name: metrics
              protocol: TCP
          volumeMounts:
            - mountPath: /config
              name: radarr-config
        - name: backup
          image: minio-backup-sidecar
          resources:
            requests:
              memory: 16Mi
              cpu: 1m
            limits:
              memory: 32Mi
              cpu: 10m
          volumeMounts:
            - mountPath: /radarr
              name: backups
      serviceAccountName: media-runas-user
      volumes:
        - name: radarr-config
          persistentVolumeClaim:
            claimName: radarr-config
        - name: radarr-downloads
          persistentVolumeClaim:
            claimName: nzbget-downloads
        - name: radarr-media-hdd
          persistentVolumeClaim:
            claimName: shared-media-hdd
        - name: radarr-media-ssd
          persistentVolumeClaim:
            claimName: shared-media-ssd
        - name: backups
          emptydir: {}
