media/base/radarr/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: radarr
spec:
  ports:
    - name: radarr
      port: 7878
      protocol: TCP
      targetPort: radarr
      appProtocol: http
    - name: metrics
      port: 9708
      protocol: TCP
      targetPort: metrics
      appProtocol: http
  selector:
    deployment: radarr
  sessionAffinity: None
  type: ClusterIP
