media/base/radarr/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: radarr
spec:
  port:
    targetPort: radarr
  to:
    kind: Service
    name: radarr
    weight: 100
  wildcardPolicy: None
